// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult tests should display the product image 1`] = `
<img
  alt="Br 1/2 Pex X 1/2 Cop Adpt"
  class="MuiBox-root css-4w7ia0"
  src="http://images.tradeservice.com/ProductImages/DIR100108/UPONOR_LF4512525_SML.jpg"
  title="Br 1/2 Pex X 1/2 Cop Adpt"
/>
`;

exports[`SearchResult tests should render correctly on Desktop 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-fsi2oy-MuiPaper-root-MuiCard-root"
    data-testid="search-result-0"
  >
    <div
      class="MuiCardContent-root css-145c6cf-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1u8pvn2"
      >
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
          data-testid="add-to-list-button-0"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
          >
            <svg>
              star-empty.svg
            </svg>
          </span>
          Add to List
        </button>
      </div>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
        href="/product/uponor-br-1-2-pex-x-1-2-cop-adpt-lf4515050/MSC-43443"
      >
        <div
          class="MuiBox-root css-6iudor"
          data-testid="product-image-0"
        >
          <img
            alt="Br 1/2 Pex X 1/2 Cop Adpt"
            class="MuiBox-root css-4w7ia0"
            src="http://images.tradeservice.com/ProductImages/DIR100108/UPONOR_LF4512525_SML.jpg"
            title="Br 1/2 Pex X 1/2 Cop Adpt"
          />
        </div>
      </a>
      <p
        class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-slmvot-MuiTypography-root"
        data-testid="product-manufacturer-name-0"
      >
        Uponor
      </p>
      <div
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
      >
        <div>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            data-testid="product-name-0"
            href="/product/uponor-br-1-2-pex-x-1-2-cop-adpt-lf4515050/MSC-43443"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-12fo3br-MuiTypography-root"
            >
              Br 1/2 Pex X 1/2 Cop Adpt
            </p>
          </a>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
        data-testid="product-manufacturer-number-0"
      >
        MFR#
         
        LF4515050
      </p>
    </div>
    <div
      class="MuiBox-root css-eskpy5"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1oiwmw4-MuiTypography-root"
        data-testid="product-price-0"
      >
        <span
          class="MuiTypography-root MuiTypography-h4 css-te0q99-MuiTypography-root"
          data-testid="product-sell-price-0"
        >
          $3.54
           
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 css-v0l0ba-MuiTypography-root"
          data-testid="product-each-0"
        >
          ea
        </span>
      </h5>
      <div
        class="MuiBox-root css-swdnp0"
        data-testid="availability-stock-chip-0"
        title="84 in stock"
      >
        <svg>
          in-stock.svg
        </svg>
         84 in stock
      </div>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-1i30rla-MuiCardActions-root"
    >
      <div
        class="number-input__container"
      >
        <div
          class="number-input__button-container extra-small"
        >
          <button
            class="number-input__button"
            data-testid="quantity-input-down-0"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="RemoveIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13H5v-2h14v2z"
              />
            </svg>
          </button>
        </div>
        <input
          class="number-input__input extra-small"
          data-testid="quantity-input-0"
          disabled=""
          index="0"
          min="1"
          style="height: 30px;"
          value="1"
        />
        <div
          class="number-input__button-container extra-small"
        >
          <button
            class="number-input__button"
            data-testid="quantity-input-up-0"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-label=""
        class=""
        data-mui-internal-clone-element="true"
        data-testid="tipDesktop"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-13bu29b-MuiButtonBase-root-MuiButton-root"
          data-testid="add-to-cart-button-0"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Add to Cart
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchResult tests should render correctly on mobile 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    data-testid="search-result-0"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-c6onk3-MuiGrid-root"
    >
      <button
        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
        data-testid="add-to-list-button-0"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
        >
          <svg>
            star-empty.svg
          </svg>
        </span>
        Add to List
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-capmjd-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1vce2kz"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
          href="/product/uponor-br-1-2-pex-x-1-2-cop-adpt-lf4515050/MSC-43443"
        >
          <div
            class="MuiBox-root css-0"
            data-testid="product-image-0"
          >
            <img
              alt="Br 1/2 Pex X 1/2 Cop Adpt"
              class="MuiBox-root css-4w7ia0"
              src="http://images.tradeservice.com/ProductImages/DIR100108/UPONOR_LF4512525_SML.jpg"
              title="Br 1/2 Pex X 1/2 Cop Adpt"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-1mum6ye-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1rr4qq7"
      >
        <p
          class="MuiTypography-root MuiTypography-caption MuiTypography-gutterBottom css-slmvot-MuiTypography-root"
          data-testid="product-manufacturer-name-0"
        >
          Uponor
        </p>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          data-testid="product-name-0"
        >
          <div>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
              href="/product/uponor-br-1-2-pex-x-1-2-cop-adpt-lf4515050/MSC-43443"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-12fo3br-MuiTypography-root"
              >
                Br 1/2 Pex X 1/2 Cop Adpt
              </p>
            </a>
          </div>
        </div>
        <div
          class="MuiBox-root css-1qm1lh"
        >
          <p
            class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            data-testid="product-manufacturer-number-0"
          >
            MFR#
             
            LF4515050
          </p>
        </div>
        <div
          class="MuiBox-root css-19unpuq"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1eebjzl-MuiTypography-root"
            data-testid="product-price-0"
          >
            <span
              class="MuiTypography-root MuiTypography-h4 css-te0q99-MuiTypography-root"
              data-testid="product-sell-price-0"
            >
              $3.54
               
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 css-1faez38-MuiTypography-root"
              data-testid="product-each-0"
            >
              ea
            </span>
          </h5>
          <div
            class="MuiBox-root css-swdnp0"
            data-testid="availability-stock-chip"
            title="84 in stock"
          >
            <svg>
              in-stock.svg
            </svg>
             84 in stock
          </div>
        </div>
        <div
          class="MuiBox-root css-7pf6at"
        >
          <div
            class="number-input__container full-width"
          >
            <div
              class="number-input__button-container small"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-down-0"
                disabled=""
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="RemoveIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13H5v-2h14v2z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="number-input__input small"
              data-testid="quantity-input-0"
              disabled=""
              index="0"
              min="1"
              value="1"
            />
            <div
              class="number-input__button-container small"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-up-0"
                disabled=""
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-v09etv-MuiButtonBase-root-MuiButton-root"
            data-testid="add-to-cart-button-0"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Add to Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
